Improved OpenAPI specification. Added `swagger-typescript-api` to Vue App for generating API SDK based on openapi.yaml . Added instructions to README files
